--- a/TimetableDesigner/TimetableDesigner.csproj
+++ b/TimetableDesigner/TimetableDesigner.csproj
@@ -143,7 +143,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportDesigner.cs">
+    <Compile Include="TimetableDesigner.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="FormMain.resx">
