--- a/TimetableDesigner/TimetableDesigner.csproj
+++ b/TimetableDesigner/TimetableDesigner.csproj
@@ -112,19 +112,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormMain.cs">
+    <Compile Include="FormReportDesigner.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormMain.Designer.cs">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <Compile Include="FormReportDesigner.Designer.cs">
+      <DependentUpon>FormReportDesigner.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormTimetableDesigner.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTimetableDesigner.Designer.cs">
+      <DependentUpon>FormTimetableDesigner.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReportDesigner.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="TimetableDesigner.cs">
       <SubType>Component</SubType>
     </Compile>
-    <EmbeddedResource Include="FormMain.resx">
-      <DependentUpon>FormMain.cs</DependentUpon>
+    <EmbeddedResource Include="FormReportDesigner.resx">
+      <DependentUpon>FormReportDesigner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTimetableDesigner.resx">
+      <DependentUpon>FormTimetableDesigner.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
