--- a/TimetableDesigner/TimetableDesigner.csproj
+++ b/TimetableDesigner/TimetableDesigner.csproj
@@ -118,23 +118,18 @@
     <Compile Include="FormReportDesigner.Designer.cs">
       <DependentUpon>FormReportDesigner.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormTimetableDesigner.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="FormTimetableDesigner.Designer.cs">
-      <DependentUpon>FormTimetableDesigner.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReportDesigner.cs" />
-    <Compile Include="TimetableDesigner.cs">
+    <Compile Include="RDElement.cs" />
+    <Compile Include="RDElementSection.cs" />
+    <Compile Include="RDSection.cs" />
+    <Compile Include="RDTableSection.cs" />
+    <Compile Include="RDTextElement.cs" />
+    <Compile Include="ReportDesigner.cs">
       <SubType>Component</SubType>
     </Compile>
     <EmbeddedResource Include="FormReportDesigner.resx">
       <DependentUpon>FormReportDesigner.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="FormTimetableDesigner.resx">
-      <DependentUpon>FormTimetableDesigner.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
